--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         </div>
                       <div class="col-sm-12 col-md-6 col-lg-4">  
-                      <div class="card">
+                      <div class="card" ontouchstart="chcksegundo()">
                       <div class="card-header" style="display: inline-flex;"><h3>Tercer Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
 
                       <div id="thirdyear" onmouseover="chcksegundo()">
@@ -77,7 +77,7 @@
    
           
                   <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card"> 
+                  <div class="card" ontouchstart="chcktercero()" > 
                          <div id="fourthyear" onmouseover="chcktercero()">
                          <div class="card-header" style="display: inline-flex;"><h3>Cuarto Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
 
@@ -85,7 +85,7 @@
                   </div>
                   </div>
                   <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card">   
+                  <div class="card" ontouchstart="chckcuarto()">   
                         <div id="fifthyear" onmouseover="chckcuarto()">
                         <div class="card-header" style="display: inline-flex;"><h3>Quinto Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
    
@@ -93,7 +93,7 @@
                   </div>
                   </div>
                   <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card">     
+                  <div class="card" ontouchstart="chckquinto()">     
                         <div id="sixthyear" onmouseover="chckquinto()">
                         <div class="card-header" style="display: inline-flex;"><h3>Sexto Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
   
