--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/all.css">
     <script src="js/all.js"></script>
     <script src="js/script.js"></script>
+    <icon src="icon.png" />
     <title>Document</title>
 </head>
 <body>
