--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <script src="js/all.js"></script>
     <script src="js/script.js"></script>
     <icon src="icon.png" />
-    <title>Bienvenido</title>
+    <title>Acerca de</title>
 </head>
 <body>
     <header>
@@ -22,9 +22,11 @@
     </header>
 <div class="container">
     <div class="card text-center">
-        <a href="app.html"><button type="button" class="btn btn-primary btn-lg">Comenzar</button></a>
-        <a href="about.html"><button type="button" class="btn btn-primary btn-lg">Acerca De</button></a>
-        <a href="app.html"><button type="button" class="btn btn-primary btn-lg">Salir</button></a> 
+        <h3>Acerca de</h3>
+  <p>Aplicación para la consulta de relatividades, estructurado en HTML, con diseños en Bootstrap, Logica Javascript
+      compilado en apk usando Phonegap, Repositorio Github, escrito en Visual Studio Code.
+  </p>
+        <a href="./index.html"><button type="button" class="btn btn-primary btn-lg">Volver</button></a> 
     </div>  
              
 
