--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
         </div>
     </header>
 <div class="container">
-    <div class="card text-center">
-        <h3>Acerca de</h3>
-  <p>Aplicación para la consulta de relatividades, estructurado en HTML, con diseños en Bootstrap, Logica Javascript
-      compilado en apk usando Phonegap, Repositorio Github, escrito en Visual Studio Code.
+    <div class="jumbotron">
+        <h3 class="display-4">Acerca de</h3>
+  <p class="lead">Aplicación para la consulta de relatividades, estructurado en HTML, con diseños en Bootstrap, Logica Javascript,
+      compilado .apk usando Phonegap, Repositorio Github, escrito en Visual Studio Code.
   </p>
-        <a href="./index.html"><button type="button" class="btn btn-primary btn-lg">Volver</button></a> 
+        <a href="./index.html"><button type="button" class="btn btn-outline-success btn-lg">Volver</button></a> 
     </div>  
              
 
