--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         </div>
     </header>
 <div class="container">
-    <div class="card text-center">
-        <a href="app.html"><button type="button" class="btn btn-primary btn-lg">Comenzar</button></a>
-        <a href="about.html"><button type="button" class="btn btn-primary btn-lg">Acerca De</button></a>
-        <a href="app.html"><button type="button" class="btn btn-primary btn-lg">Salir</button></a> 
+    <div class="jumbotron">
+         <div class="btn-group-vertical">
+           <a href="app.html"><button type="button" class="btn btn-outline-success btn-lg">Comenzar</button></a>
+            <a href="about.html"><button type="button" class="btn btn-outline-success btn-lg">Acerca De</button></a>
+            <a href="app.html"><button type="button" class="btn btn-outline-success btn-lg">Salir</button></a> 
     </div>  
              
-
+    </div>
 </div>
 
 
