fix icon reactions

--- a/app.html
+++ b/app.html
@@ -43,41 +43,41 @@
             <div class="card-deck">
                       <div class="col-sm-12 col-md-6 col-lg-4">
                       <div class="card">
-                       <div class="card-header" style="display: inline-flex;"><h3>Primer Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
+                       <div class="card-header d-flex justify-content-between"><h3>Primer Año</h3><button onclick="chckprimero()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
                         <div>
-                            <div class="primero" id="anmati" ><button onclick="prender(this)" class="btn btn-secondary" >Analisis Matematico</button></div>
-                            <div class="primero" id="isis"><button onclick="prender(this)" class="btn btn-secondary" >Introduccion a Sistemas de Informacion</button></div>
-                            <div class="primero" id="meto"><button onclick="prender(this)" class="btn btn-secondary" >Metodología de Investigacion</button></div>
-                            <div class="primero" id="admo"><button onclick="prender(this)" class="btn btn-secondary" >Administracion de las Organizaciones</button></div>
-                            <div class="primero" id="arq"><button onclick="prender(this)" class="btn btn-secondary" >Arquitectura de las Computadoras</button></div>
-                            <div class="primero" id="prgi"><button onclick="prender(this)" class="btn btn-secondary" >Programacion I</button></div>
-                            <div class="primero" id="algi"><button onclick="prender(this)" class="btn btn-secondary" >Algebra</button></div>
-                            <div class="primero" id="edi" ><button onclick="prender(this)" class="btn btn-secondary" >Espacio de Definicion I</button></div>
-                            <div class="primero" id="ingi"><button onclick="prender(this)" class="btn btn-secondary" >Ingles I</button></div>
+                            <div class="primero" id="anmati" ><button onclick="prender(this)" class="btn btn-secondary" >Analisis Matematico <span class="badge badge-dark"> 2</span></button></div>
+                            <div class="primero" id="isis"><button onclick="prender(this)" class="btn btn-secondary" >Intro a Sistemas de Informacion <span class="badge badge-dark"> 1</span></button></div>
+                            <div class="primero" id="meto"><button onclick="prender(this)" class="btn btn-secondary" >Metodología de Investigacion <span class="badge badge-dark"> 0</span></button></div>
+                            <div class="primero" id="admo"><button onclick="prender(this)" class="btn btn-secondary" >Administracion de las Organizaciones <span class="badge badge-dark"> 1</span></button></div>
+                            <div class="primero" id="arq"><button onclick="prender(this)" class="btn btn-secondary" >Arquitectura de las Computadoras <span class="badge badge-dark"> 1</span></button></div>
+                            <div class="primero" id="prgi"><button onclick="prender(this)" class="btn btn-secondary" >Programacion I <span class="badge badge-dark"> 2</span></button></div>
+                            <div class="primero" id="algi"><button onclick="prender(this)" class="btn btn-secondary" >Algebra <span class="badge badge-dark"> 1</span></button></div>
+                            <div class="primero" id="edi" ><button onclick="prender(this)" class="btn btn-secondary" >Espacio de Definicion I <span class="badge badge-dark"> 0</span></button></div>
+                            <div class="primero" id="ingi"><button onclick="prender(this)" class="btn btn-secondary" >Ingles I <span class="badge badge-dark"> 1</span></button></div>
                         </div>
                       </div>
                       </div>  
                         <div class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="card"  ontouchstart="chckprimero()">
-                        <div class="card-header" style="display: inline-flex;"><h3>Segundo Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
+                        <div class="card">
+                         <div class="card-header d-flex justify-content-between"><h3>Segundo Año</h3><button onclick="chcksegundo()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
 
-                          <div id="secondyear" onmouseover="chckprimero()">
-                          <div class="segundo" id="prob"><button onclick="prender(this)" class="btn btn-secondary">Probabilidad y Estadistica</button></div>
-                          <div class="segundo" id="sisi"><button onclick="prender(this)" class="btn btn-secondary">Sistemas de Informacion I</button></div>
-                          <div class="segundo" id="edii"><button onclick="prender(this)" class="btn btn-secondary">Espacio de Definicion II</button></div>
-                          <div class="segundo" id="os"><button onclick="prender(this)" class="btn btn-secondary">Sistemas Operativos</button></div>
-                          <div class="segundo" id="db"><button onclick="prender(this)" class="btn btn-secondary">Bases de Datos</button></div>
-                          <div class="segundo" id="anmatii"><button onclick="prender(this)" class="btn btn-secondary">Analisis Matematico II</button></div>
-                          <div class="segundo" id="ingii"><button onclick="prender(this)" class="btn btn-secondary">Ingles II</button></div>
-                          <div class="segundo" id="prgii"><button onclick="prender(this)" class="btn btn-secondary">Programacion II</button></div>
+                          <div id="secondyear" >
+                          <div class="segundo" id="prob"><button onclick="prender(this)" class="btn btn-secondary">Probabilidad y Estadistica <span class="badge badge-dark">1</span></button></div>
+                          <div class="segundo" id="sisi"><button onclick="prender(this)" class="btn btn-secondary">Sistemas de Informacion I <span class="badge badge-dark"> 3</span></button></div>
+                          <div class="segundo" id="edii"><button onclick="prender(this)" class="btn btn-secondary">Espacio de Definicion II <span class="badge badge-dark"> 0</span></button></div>
+                          <div class="segundo" id="os"><button onclick="prender(this)" class="btn btn-secondary">Sistemas Operativos <span class="badge badge-dark"> 1</span></button></div>
+                          <div class="segundo" id="db"><button onclick="prender(this)" class="btn btn-secondary">Bases de Datos <span class="badge badge-dark"> 1</span></button></div>
+                          <div class="segundo" id="anmatii"><button onclick="prender(this)" class="btn btn-secondary">Analisis Matematico II <span class="badge badge-dark"> 1</span></button></div>
+                          <div class="segundo" id="ingii"><button onclick="prender(this)" class="btn btn-secondary">Ingles II <span class="badge badge-dark"> 0</span></button></div>
+                          <div class="segundo" id="prgii"><button onclick="prender(this)" class="btn btn-secondary">Programacion II <span class="badge badge-dark"> 2</span></button></div>
                           </div>
                         </div>
                         </div>
                       <div class="col-sm-12 col-md-6 col-lg-4">  
-                      <div class="card" ontouchstart="chcksegundo()">
-                      <div class="card-header" style="display: inline-flex;"><h3>Tercer Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
+                      <div class="card">
+                      <div class="card-header d-flex justify-content-between"><h3>Tercer Año</h3><button onclick="chcktercero()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>                      
 
-                      <div id="thirdyear" onmouseover="chcksegundo()">
+                      <div id="thirdyear" >
                       <div class="tercero" id="sisii"><button onclick="prender(this)" class="btn btn-secondary">Sistemas de Informacion II</button></div>
                       <div class="tercero" id="tele"><button onclick="prender(this)" class="btn btn-secondary">Teleinformatica</button></div>
                       <div class="tercero" id="prac"><button onclick="prender(this)" class="btn btn-secondary">Practica Profesional</button></div>
@@ -93,26 +93,24 @@
    
           
                   <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" ontouchstart="chcktercero()" > 
-                         <div id="fourthyear" onmouseover="chcktercero()">
-                         <div class="card-header" style="display: inline-flex;"><h3>Cuarto Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
+                  <div class="card" > 
+                         <div id="fourthyear" >
+                   <div class="card-header d-flex justify-content-between"><h3>Cuarto Año</h3><button  onclick="chckcuarto()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
 
                          </div>
                   </div>
                   </div>
                   <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" ontouchstart="chckcuarto()">   
-                        <div id="fifthyear" onmouseover="chckcuarto()">
-                        <div class="card-header" style="display: inline-flex;"><h3>Quinto Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
-   
+                  <div class="card">   
+                        <div id="fifthyear">
+                        <div class="card-header d-flex justify-content-between"><h3>Quinto Año</h3><button onclick="chckquinto()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>   
                         </div>
                   </div>
                   </div>
                   <div class="col-sm-12 col-md-6 col-lg-4">
-                  <div class="card" ontouchstart="chckquinto()">     
-                        <div id="sixthyear" onmouseover="chckquinto()">
-                        <div class="card-header" style="display: inline-flex;"><h3>Sexto Año</h3><button style="position: relative;" type="button" class="btn btn-default"><span class="fas fa-chevron-down"></span></button></div>
-  
+                  <div class="card">     
+                        <div id="sixthyear">
+                        <div class="card-header d-flex justify-content-between"><h3>Sexto Año</h3><button type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>  
                         </div>      
                   </div>    
                   </div>   
