--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
                   </ul>
                 </div>
               </nav>
-              <header>
+              <header class="d-flex align-content-center justify-content-between">
                     <h2>Analisis de Sistemas</h2>
             </header>
 <div class="container">
@@ -43,7 +43,7 @@
             <div class="card-deck">
                       <div class="col-sm-12 col-md-6 col-lg-4">
                       <div class="card">
-                       <div class="card-header d-flex justify-content-between"><h3>Primer Año</h3><button onclick="chckprimero()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
+                       <div class="card-header d-flex justify-content-between"><h3>Primer Año</h3><button id="chckprimero" onclick="chckprimero()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
                         <div>
                             <div class="primero" id="anmati" ><button onclick="prender(this)" class="btn btn-secondary" >Analisis Matematico <span class="badge badge-dark"> 2</span></button></div>
                             <div class="primero" id="isis"><button onclick="prender(this)" class="btn btn-secondary" >Intro a Sistemas de Informacion <span class="badge badge-dark"> 1</span></button></div>
@@ -59,7 +59,7 @@
                       </div>  
                         <div class="col-sm-12 col-md-6 col-lg-4">
                         <div class="card">
-                         <div class="card-header d-flex justify-content-between"><h3>Segundo Año</h3><button onclick="chcksegundo()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
+                         <div class="card-header d-flex justify-content-between"><h3>Segundo Año</h3><button id="chcksegundo" onclick="chcksegundo()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
 
                           <div id="secondyear" >
                           <div class="segundo" id="prob"><button onclick="prender(this)" class="btn btn-secondary">Probabilidad y Estadistica <span class="badge badge-dark">1</span></button></div>
@@ -75,7 +75,7 @@
                         </div>
                       <div class="col-sm-12 col-md-6 col-lg-4">  
                       <div class="card">
-                      <div class="card-header d-flex justify-content-between"><h3>Tercer Año</h3><button onclick="chcktercero()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>                      
+                      <div class="card-header d-flex justify-content-between"><h3>Tercer Año</h3><button id="chcktercero" onclick="chcktercero()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>                      
 
                       <div id="thirdyear" >
                       <div class="tercero" id="sisii"><button onclick="prender(this)" class="btn btn-secondary">Sistemas de Informacion II</button></div>
@@ -95,7 +95,7 @@
                   <div class="col-sm-12 col-md-6 col-lg-4">
                   <div class="card" > 
                          <div id="fourthyear" >
-                   <div class="card-header d-flex justify-content-between"><h3>Cuarto Año</h3><button  onclick="chckcuarto()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
+                   <div class="card-header d-flex justify-content-between"><h3>Cuarto Año</h3><button id="chckcuarto"  onclick="chckcuarto()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>
 
                          </div>
                   </div>
@@ -103,7 +103,7 @@
                   <div class="col-sm-12 col-md-6 col-lg-4">
                   <div class="card">   
                         <div id="fifthyear">
-                        <div class="card-header d-flex justify-content-between"><h3>Quinto Año</h3><button onclick="chckquinto()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>   
+                        <div class="card-header d-flex justify-content-between"><h3>Quinto Año</h3><button id="chckquinto" onclick="chckquinto()" type="button" class="btn btn-default"><span class="fas fa-check-circle fa-3x"></span></button></div>   
                         </div>
                   </div>
                   </div>
